kitty website updates

--- a/kitty/binary.html
+++ b/kitty/binary.html
@@ -102,7 +102,7 @@ ga('send', 'pageview');
 <p>You can install pre-built binaries of <em>kitty</em> if you are on macOS or Linux using
 the following simple command:</p>
 <pre class="pre literal-block">
-curl -L <code class="file docutils literal notranslate"><span class="pre">https://sw.kovidgoyal.net/kitty/installer.sh</span></code> | sh /dev/stdin
+curl -L <code class="docutils literal notranslate"><span class="pre">https://sw.kovidgoyal.net/kitty/installer.sh</span></code> | sh /dev/stdin
 </pre>
 <p>The binaries will be installed in the standard location for your OS,
 <code class="file docutils literal notranslate"><span class="pre">/Applications/kitty.app</span></code> on macOS and <code class="file docutils literal notranslate"><span class="pre">~/.local/kitty.app</span></code> on
@@ -112,20 +112,20 @@ Linux. The installer only touches files in that directory.</p>
 <ul>
 <li><p class="first">You can specify a different install location, with <code class="docutils literal notranslate"><span class="pre">dest</span></code>:</p>
 <pre class="pre literal-block">
-curl -L <code class="file docutils literal notranslate"><span class="pre">https://sw.kovidgoyal.net/kitty/installer.sh</span></code> | sh /dev/stdin \
+curl -L <code class="docutils literal notranslate"><span class="pre">https://sw.kovidgoyal.net/kitty/installer.sh</span></code> | sh /dev/stdin \
     dest=/some/other/location
 </pre>
 </li>
 <li><p class="first">You can tell the installer not to launch <em>kitty</em> after installing it with
 <code class="docutils literal notranslate"><span class="pre">launch=n</span></code>:</p>
 <pre class="pre literal-block">
-curl -L <code class="file docutils literal notranslate"><span class="pre">https://sw.kovidgoyal.net/kitty/installer.sh</span></code> | sh /dev/stdin \
+curl -L <code class="docutils literal notranslate"><span class="pre">https://sw.kovidgoyal.net/kitty/installer.sh</span></code> | sh /dev/stdin \
     launch=n
 </pre>
 </li>
 <li><p class="first">You can use a previously downloaded dmg/tarball, with <code class="docutils literal notranslate"><span class="pre">installer</span></code>:</p>
 <pre class="pre literal-block">
-curl -L <code class="file docutils literal notranslate"><span class="pre">https://sw.kovidgoyal.net/kitty/installer.sh</span></code> | sh /dev/stdin \
+curl -L <code class="docutils literal notranslate"><span class="pre">https://sw.kovidgoyal.net/kitty/installer.sh</span></code> | sh /dev/stdin \
     installer=/path/to/dmg or tarball
 </pre>
 </li>
