--- a/kitty/build.html
+++ b/kitty/build.html
@@ -18,7 +18,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Changelog" href="changelog.html" />
-    <link rel="prev" title="kitty - the fast, featureful, GPU based, terminal emulator" href="index.html" />
+    <link rel="prev" title="kitty - Binary install" href="binary.html" />
 <!-- Google Analytics -->
 <script>
 window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
@@ -86,7 +86,7 @@ ga('send', 'pageview');
 <h3>Related Topics</h3>
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="index.html" title="previous chapter">kitty - the fast, featureful, GPU based, terminal emulator</a></li>
+      <li>Previous: <a href="binary.html" title="previous chapter">kitty - Binary install</a></li>
       <li>Next: <a href="changelog.html" title="next chapter">Changelog</a></li>
   </ul></li>
 </ul>
