--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -127,10 +127,26 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    --columns &lt;COLUMNS&gt;
+
+      <ul>
+        <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-columns">kitty-+kitten-panel command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --config &lt;CONFIG&gt;
+
+      <ul>
+        <li><a href="kittens/diff.html#cmdoption-kitty-kitten-diff-config">kitty-+kitten-diff command line option</a>
+</li>
+      </ul></li>
+      <li>
     --config &lt;CONFIG&gt;, -c &lt;CONFIG&gt;
 
       <ul>
         <li><a href="invocation.html#cmdoption-kitty-config">kitty command line option</a>
+</li>
+        <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-config">kitty-+kitten-panel command line option</a>
 </li>
       </ul></li>
       <li>
@@ -138,6 +154,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="remote-control.html#cmdoption-kitty-set-colors-configured">kitty-@-set-colors command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --context &lt;CONTEXT&gt;
+
+      <ul>
+        <li><a href="kittens/diff.html#cmdoption-kitty-kitten-diff-context">kitty-+kitten-diff command line option</a>
 </li>
       </ul></li>
       <li>
@@ -169,6 +192,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    --debug-keyboard
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-debug-keyboard">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
     --detach
 
       <ul>
@@ -194,6 +224,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="invocation.html#cmdoption-kitty-dump-commands">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --edge &lt;EDGE&gt;
+
+      <ul>
+        <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-edge">kitty-+kitten-panel command line option</a>
 </li>
       </ul></li>
       <li>
@@ -229,6 +266,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="remote-control.html#cmdoption-kitty-new-window-keep-focus">kitty-@-new-window command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --lines &lt;LINES&gt;
+
+      <ul>
+        <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-lines">kitty-+kitten-panel command line option</a>
 </li>
       </ul></li>
       <li>
@@ -279,6 +323,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    --minimum-match-length &lt;MINIMUM_MATCH_LENGTH&gt;
+
+      <ul>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-minimum-match-length">kitty-+kitten-hints command line option</a>
+</li>
+      </ul></li>
+      <li>
     --name &lt;NAME&gt;
 
       <ul>
@@ -297,6 +348,24 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="invocation.html#cmdoption-kitty-override">kitty command line option</a>
+</li>
+        <li><a href="kittens/diff.html#cmdoption-kitty-kitten-diff-override">kitty-+kitten-diff command line option</a>
+</li>
+        <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-override">kitty-+kitten-panel command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --program &lt;PROGRAM&gt;
+
+      <ul>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-program">kitty-+kitten-hints command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --regex &lt;REGEX&gt;
+
+      <ul>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-regex">kitty-+kitten-hints command line option</a>
 </li>
       </ul></li>
       <li>
@@ -378,10 +447,31 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    --type &lt;TYPE&gt;
+
+      <ul>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-type">kitty-+kitten-hints command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --url-prefixes &lt;URL_PREFIXES&gt;
+
+      <ul>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-url-prefixes">kitty-+kitten-hints command line option</a>
+</li>
+      </ul></li>
+      <li>
     --version, -v
 
       <ul>
         <li><a href="invocation.html#cmdoption-kitty-version">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --word-characters &lt;WORD_CHARACTERS&gt;
+
+      <ul>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-word-characters">kitty-+kitten-hints command line option</a>
 </li>
       </ul></li>
   </ul></td>
@@ -403,6 +493,8 @@ ga('send', 'pageview');
         <li><a href="invocation.html#cmdoption-kitty-debug-font-fallback">--debug-font-fallback</a>
 </li>
         <li><a href="invocation.html#cmdoption-kitty-debug-gl">--debug-gl</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-debug-keyboard">--debug-keyboard</a>
 </li>
         <li><a href="invocation.html#cmdoption-kitty-detach">--detach</a>
 </li>
@@ -432,6 +524,49 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty-+kitten-diff command line option
+
+      <ul>
+        <li><a href="kittens/diff.html#cmdoption-kitty-kitten-diff-config">--config &lt;CONFIG&gt;</a>
+</li>
+        <li><a href="kittens/diff.html#cmdoption-kitty-kitten-diff-context">--context &lt;CONTEXT&gt;</a>
+</li>
+        <li><a href="kittens/diff.html#cmdoption-kitty-kitten-diff-override">--override &lt;OVERRIDE&gt;, -o &lt;OVERRIDE&gt;</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-+kitten-hints command line option
+
+      <ul>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-minimum-match-length">--minimum-match-length &lt;MINIMUM_MATCH_LENGTH&gt;</a>
+</li>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-program">--program &lt;PROGRAM&gt;</a>
+</li>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-regex">--regex &lt;REGEX&gt;</a>
+</li>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-type">--type &lt;TYPE&gt;</a>
+</li>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-url-prefixes">--url-prefixes &lt;URL_PREFIXES&gt;</a>
+</li>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-word-characters">--word-characters &lt;WORD_CHARACTERS&gt;</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-+kitten-panel command line option
+
+      <ul>
+        <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-columns">--columns &lt;COLUMNS&gt;</a>
+</li>
+        <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-config">--config &lt;CONFIG&gt;, -c &lt;CONFIG&gt;</a>
+</li>
+        <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-edge">--edge &lt;EDGE&gt;</a>
+</li>
+        <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-lines">--lines &lt;LINES&gt;</a>
+</li>
+        <li><a href="kittens/panel.html#cmdoption-kitty-kitten-panel-override">--override &lt;OVERRIDE&gt;, -o &lt;OVERRIDE&gt;</a>
+</li>
+      </ul></li>
+      <li>
     kitty-@ command line option
 
       <ul>
@@ -447,6 +582,8 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-close-tab-self">--self</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty-@-close-window command line option
 
@@ -483,8 +620,6 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-get-text-self">--self</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty-@-new-window command line option
 
