--- a/kitty/kittens/unicode-input.html
+++ b/kitty/kittens/unicode-input.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="../_static/kitty.png"/>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="prev" title="Hints" href="hints.html" />
+    <link rel="prev" title="Draw a GPU accelerated dock panel on your desktop" href="panel.html" />
 <!-- Google Analytics -->
 <script>
 window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
@@ -76,7 +76,7 @@ ga('send', 'pageview');
 <h3>Related Topics</h3>
 <ul>
   <li><a href="../index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="hints.html" title="previous chapter">Hints</a></li>
+      <li>Previous: <a href="panel.html" title="previous chapter">Draw a GPU accelerated dock panel on your desktop</a></li>
   </ul></li>
 </ul>
 </div>
