kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -97,6 +97,13 @@ ga('send', 'pageview');
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
+    --align &lt;ALIGN&gt;
+
+      <ul>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-align">kitty-+kitten-icat command line option</a>
+</li>
+      </ul></li>
+      <li>
     --all, -a
 
       <ul>
@@ -124,6 +131,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="invocation.html#cmdoption-kitty-class">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --clear
+
+      <ul>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-clear">kitty-+kitten-icat command line option</a>
 </li>
       </ul></li>
       <li>
@@ -203,6 +217,20 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="invocation.html#cmdoption-kitty-detach">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --detect-support
+
+      <ul>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-detect-support">kitty-+kitten-icat command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --detection-timeout &lt;DETECTION_TIMEOUT&gt;
+
+      <ul>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-detection-timeout">kitty-+kitten-icat command line option</a>
 </li>
       </ul></li>
       <li>
@@ -355,6 +383,20 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    --place &lt;PLACE&gt;
+
+      <ul>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-place">kitty-+kitten-icat command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --print-window-size
+
+      <ul>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-print-window-size">kitty-+kitten-icat command line option</a>
+</li>
+      </ul></li>
+      <li>
     --program &lt;PROGRAM&gt;
 
       <ul>
@@ -380,6 +422,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="remote-control.html#cmdoption-kitty-set-colors-reset">kitty-@-set-colors command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --scale-up
+
+      <ul>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-scale-up">kitty-+kitten-icat command line option</a>
 </li>
       </ul></li>
       <li>
@@ -444,6 +493,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="remote-control.html#cmdoption-kitty-to">kitty-@ command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --transfer-mode &lt;TRANSFER_MODE&gt;
+
+      <ul>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-transfer-mode">kitty-+kitten-icat command line option</a>
 </li>
       </ul></li>
       <li>
@@ -552,6 +608,27 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty-+kitten-icat command line option
+
+      <ul>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-align">--align &lt;ALIGN&gt;</a>
+</li>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-clear">--clear</a>
+</li>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-detect-support">--detect-support</a>
+</li>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-detection-timeout">--detection-timeout &lt;DETECTION_TIMEOUT&gt;</a>
+</li>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-place">--place &lt;PLACE&gt;</a>
+</li>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-print-window-size">--print-window-size</a>
+</li>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-scale-up">--scale-up</a>
+</li>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-transfer-mode">--transfer-mode &lt;TRANSFER_MODE&gt;</a>
+</li>
+      </ul></li>
+      <li>
     kitty-+kitten-panel command line option
 
       <ul>
@@ -573,6 +650,8 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-to">--to &lt;TO&gt;</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty-@-close-tab command line option
 
@@ -582,8 +661,6 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-close-tab-self">--self</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty-@-close-window command line option
 
