kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -91,7 +91,6 @@ ga('send', 'pageview');
 <div class="genindex-jumpbox">
  <a href="#Symbols"><strong>Symbols</strong></a>
  | <a href="#C"><strong>C</strong></a>
- | <a href="#D"><strong>D</strong></a>
  | <a href="#K"><strong>K</strong></a>
  
 </div>
@@ -542,29 +541,29 @@ ga('send', 'pageview');
     Config Setting
 
       <ul>
-        <li><a href="kittens/diff.html#opt-diff.added_bg">diff.added_bg</a>
+        <li><a href="kittens/diff.html#opt-kitten-diff.added_bg">kitten-diff.added_bg</a>
 </li>
-        <li><a href="kittens/diff.html#opt-diff.diff_cmd">diff.diff_cmd</a>
+        <li><a href="kittens/diff.html#opt-kitten-diff.diff_cmd">kitten-diff.diff_cmd</a>
 </li>
-        <li><a href="kittens/diff.html#opt-diff.filler_bg">diff.filler_bg</a>
+        <li><a href="kittens/diff.html#opt-kitten-diff.filler_bg">kitten-diff.filler_bg</a>
 </li>
-        <li><a href="kittens/diff.html#opt-diff.foreground">diff.foreground</a>
+        <li><a href="kittens/diff.html#opt-kitten-diff.foreground">kitten-diff.foreground</a>
 </li>
-        <li><a href="kittens/diff.html#opt-diff.hunk_margin_bg">diff.hunk_margin_bg</a>
+        <li><a href="kittens/diff.html#opt-kitten-diff.hunk_margin_bg">kitten-diff.hunk_margin_bg</a>
 </li>
-        <li><a href="kittens/diff.html#opt-diff.margin_bg">diff.margin_bg</a>
+        <li><a href="kittens/diff.html#opt-kitten-diff.margin_bg">kitten-diff.margin_bg</a>
 </li>
-        <li><a href="kittens/diff.html#opt-diff.num_context_lines">diff.num_context_lines</a>
+        <li><a href="kittens/diff.html#opt-kitten-diff.num_context_lines">kitten-diff.num_context_lines</a>
 </li>
-        <li><a href="kittens/diff.html#opt-diff.pygments_style">diff.pygments_style</a>
+        <li><a href="kittens/diff.html#opt-kitten-diff.pygments_style">kitten-diff.pygments_style</a>
 </li>
-        <li><a href="kittens/diff.html#opt-diff.removed_bg">diff.removed_bg</a>
+        <li><a href="kittens/diff.html#opt-kitten-diff.removed_bg">kitten-diff.removed_bg</a>
 </li>
-        <li><a href="kittens/diff.html#opt-diff.replace_tab_by">diff.replace_tab_by</a>
+        <li><a href="kittens/diff.html#opt-kitten-diff.replace_tab_by">kitten-diff.replace_tab_by</a>
 </li>
-        <li><a href="kittens/diff.html#opt-diff.syntax_aliases">diff.syntax_aliases</a>
+        <li><a href="kittens/diff.html#opt-kitten-diff.syntax_aliases">kitten-diff.syntax_aliases</a>
 </li>
-        <li><a href="kittens/diff.html#opt-diff.title_fg">diff.title_fg</a>
+        <li><a href="kittens/diff.html#opt-kitten-diff.title_fg">kitten-diff.title_fg</a>
 </li>
         <li><a href="conf.html#opt-kitty.active_border_color">kitty.active_border_color</a>
 </li>
@@ -700,189 +699,6 @@ ga('send', 'pageview');
   </ul></td>
 </tr></table>
 
-<h2 id="D">D</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li>
-    diff.added_bg
-
-      <ul>
-        <li><a href="kittens/diff.html#opt-diff.added_bg">Config Setting</a>
-</li>
-      </ul></li>
-      <li>
-    diff.Decrease context
-
-      <ul>
-        <li><a href="kittens/diff.html#shortcut-diff.Decrease context">Keyboard Shortcut</a>
-</li>
-      </ul></li>
-      <li>
-    diff.diff_cmd
-
-      <ul>
-        <li><a href="kittens/diff.html#opt-diff.diff_cmd">Config Setting</a>
-</li>
-      </ul></li>
-      <li>
-    diff.filler_bg
-
-      <ul>
-        <li><a href="kittens/diff.html#opt-diff.filler_bg">Config Setting</a>
-</li>
-      </ul></li>
-      <li>
-    diff.foreground
-
-      <ul>
-        <li><a href="kittens/diff.html#opt-diff.foreground">Config Setting</a>
-</li>
-      </ul></li>
-      <li>
-    diff.hunk_margin_bg
-
-      <ul>
-        <li><a href="kittens/diff.html#opt-diff.hunk_margin_bg">Config Setting</a>
-</li>
-      </ul></li>
-      <li>
-    diff.Increase context
-
-      <ul>
-        <li><a href="kittens/diff.html#shortcut-diff.Increase context">Keyboard Shortcut</a>
-</li>
-      </ul></li>
-      <li>
-    diff.margin_bg
-
-      <ul>
-        <li><a href="kittens/diff.html#opt-diff.margin_bg">Config Setting</a>
-</li>
-      </ul></li>
-      <li>
-    diff.num_context_lines
-
-      <ul>
-        <li><a href="kittens/diff.html#opt-diff.num_context_lines">Config Setting</a>
-</li>
-      </ul></li>
-      <li>
-    diff.pygments_style
-
-      <ul>
-        <li><a href="kittens/diff.html#opt-diff.pygments_style">Config Setting</a>
-</li>
-      </ul></li>
-      <li>
-    diff.Quit
-
-      <ul>
-        <li><a href="kittens/diff.html#shortcut-diff.Quit">Keyboard Shortcut</a>
-</li>
-      </ul></li>
-      <li>
-    diff.removed_bg
-
-      <ul>
-        <li><a href="kittens/diff.html#opt-diff.removed_bg">Config Setting</a>
-</li>
-      </ul></li>
-      <li>
-    diff.replace_tab_by
-
-      <ul>
-        <li><a href="kittens/diff.html#opt-diff.replace_tab_by">Config Setting</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li>
-    diff.Scroll down
-
-      <ul>
-        <li><a href="kittens/diff.html#shortcut-diff.Scroll down">Keyboard Shortcut</a>
-</li>
-      </ul></li>
-      <li>
-    diff.Scroll to bottom
-
-      <ul>
-        <li><a href="kittens/diff.html#shortcut-diff.Scroll to bottom">Keyboard Shortcut</a>
-</li>
-      </ul></li>
-      <li>
-    diff.Scroll to next change
-
-      <ul>
-        <li><a href="kittens/diff.html#shortcut-diff.Scroll to next change">Keyboard Shortcut</a>
-</li>
-      </ul></li>
-      <li>
-    diff.Scroll to next page
-
-      <ul>
-        <li><a href="kittens/diff.html#shortcut-diff.Scroll to next page">Keyboard Shortcut</a>
-</li>
-      </ul></li>
-      <li>
-    diff.Scroll to previous change
-
-      <ul>
-        <li><a href="kittens/diff.html#shortcut-diff.Scroll to previous change">Keyboard Shortcut</a>
-</li>
-      </ul></li>
-      <li>
-    diff.Scroll to previous page
-
-      <ul>
-        <li><a href="kittens/diff.html#shortcut-diff.Scroll to previous page">Keyboard Shortcut</a>
-</li>
-      </ul></li>
-      <li>
-    diff.Scroll to top
-
-      <ul>
-        <li><a href="kittens/diff.html#shortcut-diff.Scroll to top">Keyboard Shortcut</a>
-</li>
-      </ul></li>
-      <li>
-    diff.Scroll up
-
-      <ul>
-        <li><a href="kittens/diff.html#shortcut-diff.Scroll up">Keyboard Shortcut</a>
-</li>
-      </ul></li>
-      <li>
-    diff.Show all context
-
-      <ul>
-        <li><a href="kittens/diff.html#shortcut-diff.Show all context">Keyboard Shortcut</a>
-</li>
-      </ul></li>
-      <li>
-    diff.Show default context
-
-      <ul>
-        <li><a href="kittens/diff.html#shortcut-diff.Show default context">Keyboard Shortcut</a>
-</li>
-      </ul></li>
-      <li>
-    diff.syntax_aliases
-
-      <ul>
-        <li><a href="kittens/diff.html#opt-diff.syntax_aliases">Config Setting</a>
-</li>
-      </ul></li>
-      <li>
-    diff.title_fg
-
-      <ul>
-        <li><a href="kittens/diff.html#opt-diff.title_fg">Config Setting</a>
-</li>
-      </ul></li>
-  </ul></td>
-</tr></table>
-
 <h2 id="K">K</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -890,31 +706,31 @@ ga('send', 'pageview');
     Keyboard Shortcut
 
       <ul>
-        <li><a href="kittens/diff.html#shortcut-diff.Decrease context">diff.Decrease context</a>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Decrease context">kitten-diff.Decrease context</a>
 </li>
-        <li><a href="kittens/diff.html#shortcut-diff.Increase context">diff.Increase context</a>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Increase context">kitten-diff.Increase context</a>
 </li>
-        <li><a href="kittens/diff.html#shortcut-diff.Quit">diff.Quit</a>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Quit">kitten-diff.Quit</a>
 </li>
-        <li><a href="kittens/diff.html#shortcut-diff.Scroll down">diff.Scroll down</a>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll down">kitten-diff.Scroll down</a>
 </li>
-        <li><a href="kittens/diff.html#shortcut-diff.Scroll to bottom">diff.Scroll to bottom</a>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to bottom">kitten-diff.Scroll to bottom</a>
 </li>
-        <li><a href="kittens/diff.html#shortcut-diff.Scroll to next change">diff.Scroll to next change</a>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to next change">kitten-diff.Scroll to next change</a>
 </li>
-        <li><a href="kittens/diff.html#shortcut-diff.Scroll to next page">diff.Scroll to next page</a>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to next page">kitten-diff.Scroll to next page</a>
 </li>
-        <li><a href="kittens/diff.html#shortcut-diff.Scroll to previous change">diff.Scroll to previous change</a>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to previous change">kitten-diff.Scroll to previous change</a>
 </li>
-        <li><a href="kittens/diff.html#shortcut-diff.Scroll to previous page">diff.Scroll to previous page</a>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to previous page">kitten-diff.Scroll to previous page</a>
 </li>
-        <li><a href="kittens/diff.html#shortcut-diff.Scroll to top">diff.Scroll to top</a>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to top">kitten-diff.Scroll to top</a>
 </li>
-        <li><a href="kittens/diff.html#shortcut-diff.Scroll up">diff.Scroll up</a>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll up">kitten-diff.Scroll up</a>
 </li>
-        <li><a href="kittens/diff.html#shortcut-diff.Show all context">diff.Show all context</a>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Show all context">kitten-diff.Show all context</a>
 </li>
-        <li><a href="kittens/diff.html#shortcut-diff.Show default context">diff.Show default context</a>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Show default context">kitten-diff.Show default context</a>
 </li>
         <li><a href="conf.html#shortcut-kitty.">kitty.</a>
 </li>
@@ -1027,6 +843,181 @@ ga('send', 'pageview');
         <li><a href="conf.html#shortcut-kitty.Toggle fullscreen">kitty.Toggle fullscreen</a>
 </li>
         <li><a href="conf.html#shortcut-kitty.Unicode input">kitty.Unicode input</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.added_bg
+
+      <ul>
+        <li><a href="kittens/diff.html#opt-kitten-diff.added_bg">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.Decrease context
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Decrease context">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.diff_cmd
+
+      <ul>
+        <li><a href="kittens/diff.html#opt-kitten-diff.diff_cmd">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.filler_bg
+
+      <ul>
+        <li><a href="kittens/diff.html#opt-kitten-diff.filler_bg">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.foreground
+
+      <ul>
+        <li><a href="kittens/diff.html#opt-kitten-diff.foreground">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.hunk_margin_bg
+
+      <ul>
+        <li><a href="kittens/diff.html#opt-kitten-diff.hunk_margin_bg">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.Increase context
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Increase context">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.margin_bg
+
+      <ul>
+        <li><a href="kittens/diff.html#opt-kitten-diff.margin_bg">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.num_context_lines
+
+      <ul>
+        <li><a href="kittens/diff.html#opt-kitten-diff.num_context_lines">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.pygments_style
+
+      <ul>
+        <li><a href="kittens/diff.html#opt-kitten-diff.pygments_style">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.Quit
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Quit">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.removed_bg
+
+      <ul>
+        <li><a href="kittens/diff.html#opt-kitten-diff.removed_bg">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.replace_tab_by
+
+      <ul>
+        <li><a href="kittens/diff.html#opt-kitten-diff.replace_tab_by">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.Scroll down
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll down">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.Scroll to bottom
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to bottom">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.Scroll to next change
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to next change">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.Scroll to next page
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to next page">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.Scroll to previous change
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to previous change">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.Scroll to previous page
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to previous page">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.Scroll to top
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll to top">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.Scroll up
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Scroll up">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.Show all context
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Show all context">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.Show default context
+
+      <ul>
+        <li><a href="kittens/diff.html#shortcut-kitten-diff.Show default context">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.syntax_aliases
+
+      <ul>
+        <li><a href="kittens/diff.html#opt-kitten-diff.syntax_aliases">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitten-diff.title_fg
+
+      <ul>
+        <li><a href="kittens/diff.html#opt-kitten-diff.title_fg">Config Setting</a>
 </li>
       </ul></li>
       <li>
@@ -1320,6 +1311,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.bell_border_color">Config Setting</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty.bell_on_tab
 
@@ -1411,8 +1404,6 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.color3">Config Setting</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty.color4
 
