kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
-    <script type="text/javascript" src="_static/documentation_options.js"></script>
+    <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
@@ -675,6 +675,10 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.tab_bar_margin_width">kitty.tab_bar_margin_width</a>
 </li>
+        <li><a href="conf.html#opt-kitty.tab_bar_style">kitty.tab_bar_style</a>
+</li>
+        <li><a href="conf.html#opt-kitty.tab_fade">kitty.tab_fade</a>
+</li>
         <li><a href="conf.html#opt-kitty.tab_separator">kitty.tab_separator</a>
 </li>
         <li><a href="conf.html#opt-kitty.term">kitty.term</a>
@@ -1311,8 +1315,6 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.bell_border_color">Config Setting</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty.bell_on_tab
 
@@ -1320,6 +1322,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.bell_on_tab">Config Setting</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty.box_drawing_scale
 
@@ -2011,6 +2015,20 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#opt-kitty.tab_bar_margin_width">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.tab_bar_style
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.tab_bar_style">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.tab_fade
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.tab_fade">Config Setting</a>
 </li>
       </ul></li>
       <li>
