--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; kitty  documentation</title>
+    <title>Index &#8212; kitty 0.10.1 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -643,6 +643,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.macos_option_as_alt">kitty.macos_option_as_alt</a>
 </li>
+        <li><a href="conf.html#opt-kitty.macos_quit_when_last_window_closed">kitty.macos_quit_when_last_window_closed</a>
+</li>
         <li><a href="conf.html#opt-kitty.macos_titlebar_color">kitty.macos_titlebar_color</a>
 </li>
         <li><a href="conf.html#opt-kitty.mouse_hide_wait">kitty.mouse_hide_wait</a>
@@ -698,6 +700,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.window_padding_width">kitty.window_padding_width</a>
 </li>
         <li><a href="conf.html#opt-kitty.window_resize_step_cells">kitty.window_resize_step_cells</a>
+</li>
+        <li><a href="conf.html#opt-kitty.x11_hide_window_decorations">kitty.x11_hide_window_decorations</a>
 </li>
       </ul></li>
   </ul></td>
@@ -1322,8 +1326,6 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.bell_on_tab">Config Setting</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty.box_drawing_scale
 
@@ -1331,6 +1333,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.box_drawing_scale">Config Setting</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty.Browse scrollback buffer in less
 
@@ -1665,6 +1669,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#opt-kitty.macos_option_as_alt">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.macos_quit_when_last_window_closed
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.macos_quit_when_last_window_closed">Config Setting</a>
 </li>
       </ul></li>
       <li>
@@ -2127,6 +2138,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#opt-kitty.window_resize_step_cells">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.x11_hide_window_decorations
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.x11_hide_window_decorations">Config Setting</a>
 </li>
       </ul></li>
   </ul></td>
