kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -277,6 +277,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    --get-clipboard
+
+      <ul>
+        <li><a href="kittens/clipboard.html#cmdoption-kitty-kitten-clipboard-get-clipboard">kitty-+kitten-clipboard command line option</a>
+</li>
+      </ul></li>
+      <li>
     --increment &lt;INCREMENT&gt;, -i &lt;INCREMENT&gt;
 
       <ul>
@@ -515,6 +522,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-url-prefixes">kitty-+kitten-hints command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --use-primary
+
+      <ul>
+        <li><a href="kittens/clipboard.html#cmdoption-kitty-kitten-clipboard-use-primary">kitty-+kitten-clipboard command line option</a>
 </li>
       </ul></li>
       <li>
@@ -1072,6 +1086,15 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty-+kitten-clipboard command line option
+
+      <ul>
+        <li><a href="kittens/clipboard.html#cmdoption-kitty-kitten-clipboard-get-clipboard">--get-clipboard</a>
+</li>
+        <li><a href="kittens/clipboard.html#cmdoption-kitty-kitten-clipboard-use-primary">--use-primary</a>
+</li>
+      </ul></li>
+      <li>
     kitty-+kitten-diff command line option
 
       <ul>
@@ -1326,6 +1349,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.bell_on_tab">Config Setting</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty.box_drawing_scale
 
@@ -1333,8 +1358,6 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.box_drawing_scale">Config Setting</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty.Browse scrollback buffer in less
 
