--- a/kitty/kittens/diff.html
+++ b/kitty/kittens/diff.html
@@ -18,7 +18,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Hints" href="hints.html" />
-    <link rel="prev" title="Support kitty development" href="../support.html" />
+    <link rel="prev" title="clipboard - copy/paste to the system clipboard" href="clipboard.html" />
 <!-- Google Analytics -->
 <script>
 window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
@@ -100,7 +100,7 @@ ga('send', 'pageview');
 <h3>Related Topics</h3>
 <ul>
   <li><a href="../index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="../support.html" title="previous chapter">Support kitty development</a></li>
+      <li>Previous: <a href="clipboard.html" title="previous chapter">clipboard - copy/paste to the system clipboard</a></li>
       <li>Next: <a href="hints.html" title="next chapter">Hints</a></li>
   </ul></li>
 </ul>
