--- a/kitty/support.html
+++ b/kitty/support.html
@@ -134,6 +134,7 @@ below:</p>
 #liberapay a {
     background: linear-gradient(rgb(92, 184, 92) 5%, rgb(62, 142, 62) 100%) rgb(92, 184, 92);
     border: 1px solid rgb(62, 142, 62);
+    color: rgb(51, 51, 51);
 }
 
 #patreon a {
