kitty website updates

--- a/kitty/support.html
+++ b/kitty/support.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Support kitty development &#8212; kitty 0.10.1 documentation</title>
+    <title>Support kitty development &#8212; kitty 0.11.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="_static/kitty.png"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="kitty-diff - A fast side-by-side diff tool with syntax highlighting and images" href="kittens/diff.html" />
+    <link rel="next" title="clipboard - copy/paste to the system clipboard" href="kittens/clipboard.html" />
     <link rel="prev" title="Controlling kitty from scripts or the shell" href="remote-control.html" />
 <!-- Google Analytics -->
 <script>
@@ -72,7 +72,7 @@ ga('send', 'pageview');
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
       <li>Previous: <a href="remote-control.html" title="previous chapter">Controlling kitty from scripts or the shell</a></li>
-      <li>Next: <a href="kittens/diff.html" title="next chapter">kitty-diff - A fast side-by-side diff tool with syntax highlighting and images</a></li>
+      <li>Next: <a href="kittens/clipboard.html" title="next chapter">clipboard - copy/paste to the system clipboard</a></li>
   </ul></li>
 </ul>
 </div>
