--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; kitty 0.10.1 documentation</title>
+    <title>Index &#8212; kitty 0.11.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -536,6 +536,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="invocation.html#cmdoption-kitty-version">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --wait-for-single-instance-window-close
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-wait-for-single-instance-window-close">kitty command line option</a>
 </li>
       </ul></li>
       <li>
@@ -1083,6 +1090,8 @@ ga('send', 'pageview');
         <li><a href="invocation.html#cmdoption-kitty-title">--title &lt;TITLE&gt;</a>
 </li>
         <li><a href="invocation.html#cmdoption-kitty-version">--version, -v</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-wait-for-single-instance-window-close">--wait-for-single-instance-window-close</a>
 </li>
       </ul></li>
       <li>
